--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Android Skeleton</string>
     <string name="message_error">Ha ocurrido un error</string>
+
+    <string name="detail_game">Detalle del juego</string>
 </resources>
